@@ -290,6 +290,10 @@
 
       <dd>ASX support</dd>
 
+      <dt> <a href="mailto:hfiguiere@teaser.fr"> Hubert Figuiere</a></dt>
+
+      <dd>patch to gnc-prices</dd>
+
       <dt> <a href="mailto:ju_finck@mail.netwave.de"> Jan-Uwe
       Finck</a></dt>
 
